Mighty Ducks Hockey League

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,27 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 <body>
     <header>
         <div class="headercon">
-            <div class="h1con">
-                <h1>Mighty Ducks Hockey League</h1>
+            <nav class="navCtn">
+                <div class="navconten">
+                    <a class="a-nav" href="../index.html">HOME</a>
+                    <a class="a-nav" href="../pages/about.html">ABOUT</a>
+                    <a class="a-nav" href="../pages/games.html">GAMES</a>
+                    <a class="a-nav" href="../pages/rules.html">RULES</a>
+                    <a class="a-nav" href="../pages/form.html">FORM</a>
+                    <a class="a-nav" href="#">CONTACT</a>
+                </div>
+            </nav>
+            <div class="titleCtn">
+                <h1 class="title">Mighty Ducks Hockey League</h1>
+                <img class="logo" src="../assets/LogoMightyducks_1.png" alt="">
             </div>
-        <div class="logocon"> 
-            <img class="logoimg" src="./assets/LogoMightyducks_1.png" alt="">
-        </div>
-        <nav>
-            <div class="navconten">
-                <a href="./index.html">HOME</a>
-                <a href="./about.html">ABOUT</a>
-                <a href="./about.html">GAMES</a>
-                <a href="./rules.html">RULES</a>
-                <a href="form.html">FORM</a>
-                <a href="#">CONTACT</a>
-            </div>
-        </nav>
         </div>
     </header>
     <main>
@@ -37,11 +35,8 @@
             <div class="articlecon">
                 <article>
                     <h3>Please emailusat mdhl@chihockey.org</h3>
-                    <p><a href="mailto:michael.randall@chihokey.org">michael.randall@chihokey.org</a></p>
+                    <p><a class="email" href="mailto:michael.randall@chihokey.org">michael.randall@chihokey.org</a></p>
                 </article>
-            </div>
-            <div class="gifcon"> 
-                <img class="gif" src="./assets/decabeza.gif" alt="gif">
             </div>
         </div>
     </main>
