--- a/index.html
+++ b/index.html
@@ -11,22 +11,20 @@
 <body>
     <header>
         <div class="headercon">
-            <div class="h1con">
-                <h1>Mighty Ducks Hockey League</h1>
+            <nav class="navCtn">
+                <div class="navconten">
+                    <a class="a-nav" href="#">HOME</a>
+                    <a class="a-nav" href="./pages/about.html">ABOUT</a>
+                    <a class="a-nav" href="./pages/games.html">GAMES</a>
+                    <a class="a-nav" href="./pages/rules.html">RULES</a>
+                    <a class="a-nav" href="./pages/form.html">FORM</a>
+                    <a class="a-nav" href="./pages/contact.html">CONTACT</a>
+                </div>
+            </nav>
+            <div class="titleCtn">
+                <h1 class="title">Mighty Ducks Hockey League</h1>
+                <img class="logo" src="./assets/LogoMightyducks_1.png" alt="">
             </div>
-        <div class="logocon"> 
-            <img class="logoimg" src="./assets/LogoMightyducks_1.png" alt="">
-        </div>
-        <nav>
-            <div class="navconten">
-                <a href="#">HOME</a>
-                <a href="about.html">ABOUT</a>
-                <a href="games.html">GAMES</a>
-                <a href="rules.html">RULES</a>
-                <a href="form.html">FORM</a>
-                <a href="contact.html">CONTACT</a>
-            </div>
-        </nav>
         </div>
     </header>
     <main>
@@ -52,7 +50,7 @@
             </div>
         </div>
         <footer>
-           <p>Copyright © 2022 All Rights Reserved by Alexis Yusti.</p>
+           <p class="text-footer">Copyright © 2022 All Rights Reserved by Alexis Yusti.</p>
         </footer>
     </main>
 </body>
