--- a/pages/about.html
+++ b/pages/about.html
@@ -5,27 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 <body>
     <header>
         <div class="headercon">
-            <div class="h1con">
-                <h1>Mighty Ducks Hockey League</h1>
+            <nav class="navCtn">
+                <div class="navconten">
+                    <a class="a-nav" href="../index.html">HOME</a>
+                    <a class="a-nav" href="#">ABOUT</a>
+                    <a class="a-nav" href="../pages/games.html">GAMES</a>
+                    <a class="a-nav" href="../pages/rules.html">RULES</a>
+                    <a class="a-nav" href="../pages/form.html">FORM</a>
+                    <a class="a-nav" href="../pages/contact.html">CONTACT</a>
+                </div>
+            </nav>
+            <div class="titleCtn">
+                <h1 class="title">Mighty Ducks Hockey League</h1>
+                <img class="logo" src="../assets/LogoMightyducks_1.png" alt="">
             </div>
-        <div class="logocon"> 
-            <img class="logoimg" src="./assets/LogoMightyducks_1.png" alt="">
-        </div>
-        <nav>
-            <div class="navconten">
-                <a href="index.html">HOME</a>
-                <a href="#">ABOUT</a>
-                <a href="games.html">GAMES</a>
-                <a href="rules.html">RULES</a>
-                <a href="form.html">FORM</a>
-                <a href="contact.html">CONTACT</a>
-            </div>
-        </nav>
         </div>
     </header>
     <main>
@@ -57,7 +55,7 @@
         </div>
         </div>
         <footer>
-            <p>Copyright © 2022 All Rights Reserved by Alexis Yusti.</p>
+            <p class="text-footer">Copyright © 2022 All Rights Reserved by Alexis Yusti.</p>
          </footer>
         
     </main>
